<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.courtcounter.MainActivity"
    style="@style/scrollViewStyle">

    <RelativeLayout style="@style/relativeLayoutStyle">

        <LinearLayout style="@style/linearLayoutStyle">

            <LinearLayout style="@style/linearLayoutColumnStyle">

                <TextView
                    style="@style/teamTextStyle"
                    android:text="@string/team_a" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/scoreTextStyle"
                    android:text="@string/zeroScoreTeamA" />

                <Button
                    style="@style/scoreButtonStyle"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/scoreAddThree" />

                <Button
                    style="@style/scoreButtonStyle"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/scoreAddOne" />

                <Button
                    style="@style/scoreButtonStyle"
                    android:onClick="addOneForTeamA"
                    android:text="@string/scoreGoal" />

            </LinearLayout>

            <View style="@style/grayLineViewStyle" />

            <LinearLayout style="@style/linearLayoutColumnStyle">

                <TextView
                    style="@style/teamTextStyle"
                    android:text="@string/team_b" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/scoreTextStyle"
                    android:text="@string/zeroScoreTeamB" />

                <Button
                    style="@style/scoreButtonStyle"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/scoreAddThree" />

                <Button
                    style="@style/scoreButtonStyle"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/scoreAddOne" />

                <Button
                    style="@style/scoreButtonStyle"
                    android:onClick="addOneForTeamB"
                    android:text="@string/scoreGoal" />

            </LinearLayout>

        </LinearLayout>

        <Button
            style="@style/resetButtonStyle"
            android:onClick="resetScore"
            android:text="@string/reset" />

    </RelativeLayout>

</ScrollView>